use RetroLambda and backport of streams